--- a/flink-dist-tob/pom.xml
+++ b/flink-dist-tob/pom.xml
@@ -124,6 +124,21 @@ under the License.
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-statebackend-rocksdb_${scala.binary.version}</artifactId>
 			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.data-artisans</groupId>
+			<artifactId>frocksdbjni</artifactId>
+			<version>5.17.2-artisans-2.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.bytedance</groupId>
+			<artifactId>fterarkdbjni</artifactId>
+			<version>5.18.3-bytedance-terark-1.0-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
