--- a/flink-dist-tob/src/main/flink-bin/conf/log4j.properties
+++ b/flink-dist-tob/src/main/flink-bin/conf/log4j.properties
@@ -44,11 +44,17 @@ appender.console.layout.pattern     = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c - %
 
 # Log all infos in the given file
 appender.main.name                  = MainAppender
-appender.main.type                  = File
+appender.main.type                  = RollingFile
 appender.main.append                = false
 appender.main.fileName              = ${sys:log.file}
+appender.main.filePattern           = ${sys:log.file}.%i
 appender.main.layout.type           = PatternLayout
-appender.main.layout.pattern        = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c - %m%n
+appender.main.layout.pattern        = %d{yyyy-MM-dd HH:mm:ss,SSS} %-5p %-60c %-60t %x - %m%n
+appender.main.policies.type         = Policies
+appender.main.policies.size.type    = SizeBasedTriggeringPolicy
+appender.main.policies.size.size    = 100MB
+appender.main.strategy.type         = DefaultRolloverStrategy
+appender.main.strategy.max          = 5
 
 # Suppress the irrelevant (wrong) warnings from the Netty channel handler
 logger.netty.name                   = org.apache.flink.shaded.akka.org.jboss.netty.channel.DefaultChannelPipeline
