--- a/flink-dist-tob/src/main/resources/flink-conf-las.yaml
+++ b/flink-dist-tob/src/main/resources/flink-conf-las.yaml
@@ -108,6 +108,10 @@ common:
 
   jobmanager.execution.schedule-task-fairly: false
 
+  # metrics
+  metrics.reporters: prometheus
+  metrics.reporter.prometheus.class: org.apache.flink.metrics.prometheus.PrometheusReporter
+
 edge:
   dc: cn
   clusterName: edge
