[#5107739] Change client log4j properties to support analysis of Flink client log

--- a/flink-dist/src/main/flink-bin/conf/log4j-cli.properties
+++ b/flink-dist/src/main/flink-bin/conf/log4j-cli.properties
@@ -34,7 +34,7 @@ appender.databus.permitsPerSecond = 10000
 appender.databus.metricsUpdateInterval = 10000
 appender.databus.databusLevel = WARN
 appender.databus.layout.type = PatternLayout
-appender.databus.layout.pattern = db4jv3 %X{ip} %X{hadoop_user} %X{pid} %X{cid} %d{yyyy-MM-dd_HH:mm:ss} %X{yarn_job} %X{yarn_queue} %p %c{1}: %m
+appender.databus.layout.pattern = flink_client_log %X{flink_env_type} %X{flink_job_name} %X{flink_application_id} %X{flink_job_owner} %X{flink_queue} %d{yyyy-MM-dd_HH:mm:ss} %p %c{1}: %m
 
 # suppress the warning that hadoop native libraries are not loaded (irrelevant for the client)
 logger.hadoopnative.name = org.apache.hadoop.util.NativeCodeLoader
