[#5251136] Show real TM cpu and memory info

--- a/flink-dist-tob/src/main/resources/flink-conf.yaml
+++ b/flink-dist-tob/src/main/resources/flink-conf.yaml
@@ -191,6 +191,7 @@ common:
   web.shell-enable: false
   web.metrics-url-enable: false
   web.dtop-url-enable: false
+  web.display-container-real-resource-enable: true
 
   #==============================================================================
   #
